<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/menu_food_name"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tv_prices_title"
        android:layout_toStartOf="@+id/tv_subtotal_title"
        android:gravity="center"
        android:text="@string/menu_food_amount"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_subtotal_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:text="@string/menu_food_subtotal"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_prices_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="140dp"
        android:text="@string/menu_food_price"
        android:textSize="16sp" />

</RelativeLayout>
