<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="2"
    android:orientation="vertical">


    <!--重量值显示-->
    <RelativeLayout
        android:id="@+id/rl_weight_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_weight_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/top_weight_tip"
            android:textColor="@color/common_txt_color"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/tv_weight_tip"
            android:gravity="center"
            android:text="0.00 KG"
            android:textColor="@color/common_txt_color"
            android:textSize="32sp" />

        <!--稳定，零位，去皮 按钮-->
        <LinearLayout
            android:id="@+id/ll_rb_root"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@id/tv_weight"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/tv_weight_tip"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_stable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:text="@string/weight_status_stable" />

            <RadioButton
                android:id="@+id/rb_zero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:text="@string/weight_status_zero" />

            <RadioButton
                android:id="@+id/rb_peel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:text="@string/weight_status_tare" />

        </LinearLayout>


    </RelativeLayout>

    <!--分割线-->
    <include layout="@layout/davide_horizontal_line" />

    <!--菜单明细表头-->
    <include layout="@layout/layout_menu_title" />

    <!--菜单明细-->
    <com.cy.cyrvadapter.recyclerview.VerticalRecyclerView
        android:id="@+id/vrv_menu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!--分割线-->
    <include layout="@layout/davide_horizontal_line" />

    <!--底部设置按钮-->
    <include layout="@layout/layout_left_setting" />

    <!--分割线-->
    <include layout="@layout/davide_horizontal_line" />

    <!--底部收银按钮-->
    <include layout="@layout/layout_pay" />

</LinearLayout>