<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_bottom_root"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginTop="3dp">

    <!--底部设置按钮:置零 -->
    <RelativeLayout
        android:id="@+id/rl_zero_root"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/rl_peel_root"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="7dp"
            android:paddingRight="7dp">

            <ImageView
                android:id="@+id/iv_zero"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_zero" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_zero"
                android:layout_centerHorizontal="true"
                android:text="@string/set_zero"
                android:textSize="16sp" />

        </RelativeLayout>
    </RelativeLayout>


    <!--底部设置按钮:去皮 -->
    <RelativeLayout
        android:id="@+id/rl_peel_root"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:paddingLeft="7dp"
        android:paddingRight="7dp">

        <ImageView
            android:id="@+id/iv_peel"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_peel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/iv_peel"
            android:text="@string/set_tare"
            android:textSize="16sp" />


    </RelativeLayout>

    <!--底部设置按钮:删除 -->
    <RelativeLayout
        android:id="@+id/rl_item_delete"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_toEndOf="@id/rl_peel_root"
        android:gravity="center"
        android:paddingLeft="7dp"
        android:paddingRight="7dp">

        <ImageView
            android:id="@+id/iv_item_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_item_delete"
            android:layout_centerHorizontal="true"
            android:text="@string/delete"
            android:textSize="16sp" />


    </RelativeLayout>

</RelativeLayout>
